--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "mongoose": "^5.10.18",
-    "react-router-dom": "^5.2.0"
+    "react-bootstrap": "^1.4.3",
+    "react-modal": "^3.12.1",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
