--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-bootstrap": "^1.4.3",
     "react-modal": "^3.12.1",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
