--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.18",
     "react-bootstrap": "^1.4.3",
